{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 147,
  "lineage": "5862086d-1ee4-ad4a-02ee-aa84e5a0015f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:loadbalancer/app/week6-experiment-alb/9f8f92844fbbf1fe",
            "arn_suffix": "app/week6-experiment-alb/9f8f92844fbbf1fe",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "week6-experiment-alb-1340292979.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267039705:loadbalancer/app/week6-experiment-alb/9f8f92844fbbf1fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "week6-experiment-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-05e1b1c33bf1855ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c13281c977104de"
              },
              {
                "subnet_id": "subnet-030c2e8c9a5f76266"
              },
              {
                "subnet_id": "subnet-0bf2bb40c18c5d4ee"
              },
              {
                "subnet_id": "subnet-0d91d15005d7411bc"
              }
            ],
            "subnets": [
              "subnet-02c13281c977104de",
              "subnet-030c2e8c9a5f76266",
              "subnet-0bf2bb40c18c5d4ee",
              "subnet-0d91d15005d7411bc"
            ],
            "tags": {
              "Name": "week6-experiment-alb"
            },
            "tags_all": {
              "Name": "week6-experiment-alb"
            },
            "vpc_id": "vpc-006d131bdae7cbcdc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:loadbalancer/app/week6-experiment-alb/9f8f92844fbbf1fe"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:listener/app/week6-experiment-alb/9f8f92844fbbf1fe/a7a4a06c36605793",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:targetgroup/week6-experiment-tg/3c28a1822d5c6f39",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267039705:listener/app/week6-experiment-alb/9f8f92844fbbf1fe/a7a4a06c36605793",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:loadbalancer/app/week6-experiment-alb/9f8f92844fbbf1fe",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:listener/app/week6-experiment-alb/9f8f92844fbbf1fe/a7a4a06c36605793"
          },
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.network.aws_security_group.alb",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:targetgroup/week6-experiment-tg/3c28a1822d5c6f39",
            "arn_suffix": "targetgroup/week6-experiment-tg/3c28a1822d5c6f39",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267039705:targetgroup/week6-experiment-tg/3c28a1822d5c6f39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "week6-experiment-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "week6-experiment-tg"
            },
            "tags_all": {
              "Name": "week6-experiment-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-006d131bdae7cbcdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267039705:targetgroup/week6-experiment-tg/3c28a1822d5c6f39"
          },
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267039705:security-group/sg-067bad710d3a6b5db",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067bad710d3a6b5db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030b50971f68dff77"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "week6-experiment-redis-sg",
            "name_prefix": "",
            "owner_id": "533267039705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week6-experiment-redis-sg"
            },
            "tags_all": {
              "Name": "week6-experiment-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d131bdae7cbcdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267039705:vpc/vpc-006d131bdae7cbcdc",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04e1b256105043b22",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08415a06ed96ac4fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006d131bdae7cbcdc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0afc6958384bc3934",
            "owner_id": "533267039705",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267039705:security-group/sg-05e1b1c33bf1855ad",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e1b1c33bf1855ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "week6-experiment-alb-sg",
            "name_prefix": "",
            "owner_id": "533267039705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week6-experiment-alb-sg"
            },
            "tags_all": {
              "Name": "week6-experiment-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d131bdae7cbcdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267039705:security-group/sg-030b50971f68dff77",
            "description": "Allow traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030b50971f68dff77",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e1b1c33bf1855ad"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "week6-experiment-ecs-sg",
            "name_prefix": "",
            "owner_id": "533267039705",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week6-experiment-ecs-sg"
            },
            "tags_all": {
              "Name": "week6-experiment-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d131bdae7cbcdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}